--- a/styles/ProjectCard.module.css
+++ b/styles/ProjectCard.module.css
@@ -1,5 +1,5 @@
 .card {
-  background: var(--article-bg);
+  /* background: var(--article-bg); */
   display: flex;
   flex-direction: column;
   border-radius: 12px;
