--- a/styles/RepoCard.module.css
+++ b/styles/RepoCard.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: var(--article-bg);
+  /* background: var(--article-bg); */
   border-radius: 8px;
   padding: 1.25rem;
   height: 100%;
